# volumerize

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/actions/generate-docker-config/: Dockerfile
.github/workflows/: docker-build.yml  docker-test.yml  prune-packages.yml  prune-untagged.yml  version-bump.yml
backends/AmazonS3/: README.md
backends/BackblazeB2/: README.md
backends/Dropbox/: README.md
backends/GoogleDrive/: README.md
imagescripts/: create_jobber.sh  find_job_id.sh
prepost_strategies/mongodb/: docker-compose.yml
prepost_strategies/mysql/: README.md  docker-compose.yml
prepost_strategies/mysql/postexecute/restore/: 10-mysqlimport.sh
prepost_strategies/mysql/preexecute/backup/: 10-mysqldump.sh
prepost_strategies/mysql/utils/: mysql_base.sh
test/: test-multiple-sources.bats  test.bats
